# HotelTravel

./: .dockerignore  .gitignore  Dockerfile.app  Dockerfile.bot  README.md  check_websites_availability.sh  clean_up.sh  local_run.sh  main.py  parsers.py  requirements.txt  requirments.txt  run_linters.sh  run_server.sh  run_tg_bot.sh  settings.py  vizualization.py
.github/workflows/: ci.yml
Autotests/: test_calculations.py
JsonData/: attractions_data.json  hotels_data.json  hotels_data_backup.json
MappingData/: data_loader.py  hotels_info.json  map_generator.py  settings.py  test.py  vizualization.py
Parsers/: hotels_parser.py  parser_template.py  parsers.py  sights_parser.py
Telegram/: bot.py  data_setup.py  server_queries.py
Telegram/Calculation_Server/: CMakeLists.txt  Calculations.cpp  Calculations.h  Server.cpp  Server.h
